--- a/practica 2/estilos.css
+++ b/practica 2/estilos.css
@@ -44,3 +44,19 @@ body {
     text-align: center;
     box-shadow: 2px 4px #ccc;
 }
+.ficha-Lorena{
+font-family:Arial, Helvetica, sans-serif;
+    line-height:normal;
+    marging:20pz auto 30px;
+    height:50px;
+    width:520px;
+    box-shadow: 4px 5px color:red;
+    text-align;center;
+    color:blue;
+}
+    
+  
+    
+    
+			
+           
