--- a/practica 2/estilos.css
+++ b/practica 2/estilos.css
@@ -44,19 +44,18 @@ body {
     text-align: center;
     box-shadow: 2px 4px #ccc;
 }
-.ficha-Lorena{
-font-family:Arial, Helvetica, sans-serif;
-    line-height:normal;
-    marging:20pz auto 30px;
-    height:50px;
-    width:520px;
-    box-shadow: 4px 5px color:red;
-    text-align;center;
-    color:blue;
+body {
+    margin: 0;
+    padding: 0;
 }
-    
-  
-    
-    
-			
-           
+.Ficha-xoch {
+   
+    font-family: 'Century Gothic', Arial, sans-serif;
+    background-color: #F7D5F6;
+    width: 350px;
+    display: block;
+    margin: auto;
+    border: #05545A 5px dashed;
+    text-align: center;
+    color: #540851;
+}
