--- a/practica 2/estilos.css
+++ b/practica 2/estilos.css
@@ -43,20 +43,20 @@ body {
     border: 1px solid black;
     text-align: center;
     box-shadow: 2px 4px #ccc;
+
+
+
+} 
+.Ficha-Enrique{
+    font-family: cursive;
+    background-color:rgb(197, 235, 135);
+    width: 400px;
+    display: block 20 px;
+    margin: auto;
+    border: 8px solid coral;
+    text-align: center;
+    color: rgb(139, 76, 34);
+    box-shadow: 5px 5px rgb(146, 143, 106);
+   
+        
 }
-.ficha-Lorena{
-font-family:Arial, Helvetica, sans-serif;
-    line-height:normal;
-    marging:20pz auto 30px;
-    height:50px;
-    width:520px;
-    box-shadow: 4px 5px color:red;
-    text-align;center;
-    color:blue;
-}
-    
-  
-    
-    
-			
-           
