--- a/practica 2/estilos.css
+++ b/practica 2/estilos.css
@@ -88,3 +88,16 @@ body {
     
     
 }
+.Ficha-carlos{
+    font-family: 'Times New Roman', Times, serif;
+    background: linear-gradient( 45deg, #008080, #ffebcd);
+    width: 400px;
+    display: block 20 px;
+    margin: auto;
+    border: 8px inset rgb(80, 191, 255);
+    text-align: center;
+    color: rgb(85, 18, 99);
+    box-shadow: 5px 5px rgb(146, 143, 106);
+   
+        
+}
