--- a/proyecto1/src/App.css
+++ b/proyecto1/src/App.css
@@ -62,3 +62,9 @@
     width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem); }
   .row .col-3-of-4 {
     width: calc(3 * ((100% - 3 * 6rem) / 4) +  (2 * 6rem)); }
+
+.Background{
+  width: "100%";
+  height: "100%";
+  background-image: url("components/DevProfile/Recursos/Fondo.jpg");
+}
